// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`App Page with route "/" matches snapshot, route "/" 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="App__Canvas"
    />
    <div
      class="App__Wrapper"
    >
      <header
        class="Header"
      >
        <div
          class="Header__LeftBlock"
        >
          <img
            alt="logo"
            src="FileMock"
            width="64"
          />
          <h1
            class="Header__LogoText"
          >
            <div>
              Web
            </div>
            <div>
              Resume
            </div>
          </h1>
        </div>
        <div
          class="Header__NavLinks"
        >
          <a
            aria-current="page"
            class="Header__NavLink active"
            data-discover="true"
            href="/"
          >
            /Home
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/experience"
          >
            /Experience
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/skills"
          >
            /Skills
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/projects"
          >
            /Projects
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/contacts"
          >
            /Contacts
          </a>
        </div>
        <div
          class="Header__RightBlock"
        >
          <div
            class="Header__Menu"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Open menu"
              class="Header__MenuButton"
              type="button"
            >
              <svg
                class="Icon Icon_appFontSize"
                color="currentColor"
                fill="currentColor"
              >
                <use
                  xlink:href="FileMock#menu"
                />
              </svg>
            </button>
          </div>
        </div>
      </header>
      <main
        class="MainLayout"
      >
        <div
          class="MainLayout__Wrapper"
        >
          <div
            class="HomePage"
          >
            <div
              class="ProfileDetails"
            >
              <img
                alt=""
                class="ProfileDetails__Photo"
                src="FileMock"
              />
              <div
                class="ProfileDetails__Info"
              >
                <h2
                  class="ProfileDetails__Name"
                >
                  Alexander Evstafiadi
                </h2>
                <p
                  class="ProfileDetails__Position"
                >
                  &gt;Senior Software Engineer
                </p>
                <div
                  class="ProfileDetails__Meta"
                >
                  <span>
                    <span
                      class="ProfileDetails__Comments"
                    >
                      //
                    </span>
                     STATUS: Not looking for a job
                  </span>
                  <span>
                    <span
                      class="ProfileDetails__Comments"
                    >
                      //
                    </span>
                     LOCATION: Voronezh, Russia
                  </span>
                </div>
              </div>
            </div>
            <div
              class="HomePage__DetailsGrid"
            >
              <div
                class="AdditionalDetails"
              >
                <h3
                  class="AdditionalDetails__Title glitch"
                >
                  Personal_Info
                </h3>
                <div
                  class="AdditionalDetails__List"
                >
                  <p
                    class="AdditionalDetails__Item"
                  >
                    <span
                      class="AdditionalDetails__Label"
                    >
                      Age
                    </span>
                     
                    <span
                      class="AdditionalDetails__Value"
                    >
                      :
                       
                      29
                    </span>
                  </p>
                  <p
                    class="AdditionalDetails__Item"
                  >
                    <span
                      class="AdditionalDetails__Label"
                    >
                      Date_of_birthday
                    </span>
                     
                    <span
                      class="AdditionalDetails__Value"
                    >
                      :
                       
                      February 22, 1996
                    </span>
                  </p>
                  <p
                    class="AdditionalDetails__Item"
                  >
                    <span
                      class="AdditionalDetails__Label"
                    >
                      Relocation
                    </span>
                     
                    <span
                      class="AdditionalDetails__Value"
                    >
                      :
                       
                      Open to offers
                    </span>
                  </p>
                  <p
                    class="AdditionalDetails__Item"
                  >
                    <span
                      class="AdditionalDetails__Label"
                    >
                      Business_trips
                    </span>
                     
                    <span
                      class="AdditionalDetails__Value"
                    >
                      :
                       
                      Willing to travel
                    </span>
                  </p>
                </div>
              </div>
              <div
                class="AdditionalDetails"
              >
                <h3
                  class="AdditionalDetails__Title glitch"
                >
                  Education
                </h3>
                <div
                  class="AdditionalDetails__List"
                >
                  <p
                    class="AdditionalDetails__Item"
                  >
                    <span
                      class="AdditionalDetails__Label"
                    >
                      University
                    </span>
                     
                    <span
                      class="AdditionalDetails__Value"
                    >
                      :
                       
                      Voronezh State University
                    </span>
                  </p>
                  <p
                    class="AdditionalDetails__Item"
                  >
                    <span
                      class="AdditionalDetails__Label"
                    >
                      Degree
                    </span>
                     
                    <span
                      class="AdditionalDetails__Value"
                    >
                      :
                       
                      Master's degree
                    </span>
                  </p>
                  <p
                    class="AdditionalDetails__Item"
                  >
                    <span
                      class="AdditionalDetails__Label"
                    >
                      Field_of_study
                    </span>
                     
                    <span
                      class="AdditionalDetails__Value"
                    >
                      :
                       
                      Radio Physical Sciences
                    </span>
                  </p>
                  <p
                    class="AdditionalDetails__Item"
                  >
                    <span
                      class="AdditionalDetails__Label"
                    >
                      Website
                    </span>
                     
                    <span
                      class="AdditionalDetails__Value"
                    >
                      :
                       
                      <a
                        class="AdditionalDetails__Link"
                        href="https://vsu.ru"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        https://vsu.ru
                      </a>
                    </span>
                  </p>
                </div>
              </div>
              <div
                class="AdditionalDetails"
              >
                <h3
                  class="AdditionalDetails__Title glitch"
                >
                  Contact_Details
                </h3>
                <div
                  class="AdditionalDetails__List"
                >
                  <p
                    class="AdditionalDetails__Item"
                  >
                    <span
                      class="AdditionalDetails__Label"
                    >
                      Phone
                    </span>
                     
                    <span
                      class="AdditionalDetails__Value"
                    >
                      :
                       
                      <a
                        class="AdditionalDetails__Link"
                        href="tel:+7 (960)-125-41-38"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        +7 (960)-125-41-38
                      </a>
                    </span>
                  </p>
                  <p
                    class="AdditionalDetails__Item"
                  >
                    <span
                      class="AdditionalDetails__Label"
                    >
                      Email
                    </span>
                     
                    <span
                      class="AdditionalDetails__Value"
                    >
                      :
                       
                      <a
                        class="AdditionalDetails__Link"
                        href="mailto:aleksandrevstafiadi@gmail.com"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        aleksandrevstafiadi@gmail.com
                      </a>
                    </span>
                  </p>
                  <p
                    class="AdditionalDetails__Item"
                  >
                    <span
                      class="AdditionalDetails__Label"
                    >
                      Linkedin
                    </span>
                     
                    <span
                      class="AdditionalDetails__Value"
                    >
                      :
                       
                      <a
                        class="AdditionalDetails__Link"
                        href="https://www.linkedin.com/in/alexander-evstafiadi"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        in/alexander-evstafiadi
                      </a>
                    </span>
                  </p>
                </div>
              </div>
            </div>
            <div
              class="HomePage__Footer"
            >
              <p>
                LAST UPDATE: 
                <span
                  class="HomePage__AccentText"
                >
                  October 22, 2025
                </span>
              </p>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`App Page with route "/contacts" matches snapshot, route "/contacts" 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="App__Canvas"
    />
    <div
      class="App__Wrapper"
    >
      <header
        class="Header"
      >
        <div
          class="Header__LeftBlock"
        >
          <img
            alt="logo"
            src="FileMock"
            width="64"
          />
          <h1
            class="Header__LogoText"
          >
            <div>
              Web
            </div>
            <div>
              Resume
            </div>
          </h1>
        </div>
        <div
          class="Header__NavLinks"
        >
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/"
          >
            /Home
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/experience"
          >
            /Experience
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/skills"
          >
            /Skills
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/projects"
          >
            /Projects
          </a>
          <a
            aria-current="page"
            class="Header__NavLink active"
            data-discover="true"
            href="/contacts"
          >
            /Contacts
          </a>
        </div>
        <div
          class="Header__RightBlock"
        >
          <div
            class="Header__Menu"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Open menu"
              class="Header__MenuButton"
              type="button"
            >
              <svg
                class="Icon Icon_appFontSize"
                color="currentColor"
                fill="currentColor"
              >
                <use
                  xlink:href="FileMock#menu"
                />
              </svg>
            </button>
          </div>
        </div>
      </header>
      <main
        class="MainLayout"
      >
        <div
          class="MainLayout__Wrapper"
        >
          <div
            class="ContactsPage"
          >
            <h2
              class="ContactsPage__Title glitch"
            >
              Contacts
            </h2>
            <div
              class="ContactsPage__Items"
            >
              <a
                class="ContactLink"
                href="https://github.com/a1exevs"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    GitHub
                  </title>
                  <use
                    xlink:href="FileMock#github"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  GitHub
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://voronezh.hh.ru/resume/10aa6646ff077b3cb70039ed1f47394e4f476f"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    Head Hunter
                  </title>
                  <use
                    xlink:href="FileMock#head-hunter"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  hh.ru
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://www.linkedin.com/in/alexander-evstafiadi/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    LinkedIn
                  </title>
                  <use
                    xlink:href="FileMock#linkedin"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  LinkedIn
                </span>
              </a>
              <a
                class="ContactLink"
                href="mailto:aleksandrevstafiadi@gmail.com"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    Google email
                  </title>
                  <use
                    xlink:href="FileMock#email"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  Google Email
                </span>
              </a>
              <a
                class="ContactLink"
                href="mailto:evstafiadi.shura@yandex.ru"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    Yandex email
                  </title>
                  <use
                    xlink:href="FileMock#email"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  Yandex Email
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://www.youtube.com/channel/UCVrwEd4-3guB5NFQ_oidREg"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    YouTube
                  </title>
                  <use
                    xlink:href="FileMock#youtube"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  YouTube
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://leetcode.com/u/a1exevs/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    LeetCode
                  </title>
                  <use
                    xlink:href="FileMock#leetcode"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  LeetCode
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://www.instagram.com/alexevs_gb"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    Instagram
                  </title>
                  <use
                    xlink:href="FileMock#instagram"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  Instagram
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://api.whatsapp.com/send?phone=79601254138"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    WhatsApp
                  </title>
                  <use
                    xlink:href="FileMock#whatsapp"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  WhatsApp
                </span>
              </a>
              <a
                class="ContactLink"
                href="https://t.me/AlexanderEvstafiadi"
                rel="noopener noreferrer"
                target="_blank"
              >
                <svg
                  class="Icon Icon_appFontSize ContactLink__Icon"
                  color="currentColor"
                  fill="currentColor"
                >
                  <title>
                    Telegram
                  </title>
                  <use
                    xlink:href="FileMock#telegram"
                  />
                </svg>
                <span
                  class="ContactLink__Label"
                >
                  Telegram
                </span>
              </a>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`App Page with route "/experience" matches snapshot, route "/experience" 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="App__Canvas"
    />
    <div
      class="App__Wrapper"
    >
      <header
        class="Header"
      >
        <div
          class="Header__LeftBlock"
        >
          <img
            alt="logo"
            src="FileMock"
            width="64"
          />
          <h1
            class="Header__LogoText"
          >
            <div>
              Web
            </div>
            <div>
              Resume
            </div>
          </h1>
        </div>
        <div
          class="Header__NavLinks"
        >
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/"
          >
            /Home
          </a>
          <a
            aria-current="page"
            class="Header__NavLink active"
            data-discover="true"
            href="/experience"
          >
            /Experience
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/skills"
          >
            /Skills
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/projects"
          >
            /Projects
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/contacts"
          >
            /Contacts
          </a>
        </div>
        <div
          class="Header__RightBlock"
        >
          <div
            class="Header__Menu"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Open menu"
              class="Header__MenuButton"
              type="button"
            >
              <svg
                class="Icon Icon_appFontSize"
                color="currentColor"
                fill="currentColor"
              >
                <use
                  xlink:href="FileMock#menu"
                />
              </svg>
            </button>
          </div>
        </div>
      </header>
      <main
        class="MainLayout"
      >
        <div
          class="MainLayout__Wrapper"
        >
          <div
            class="ExperiencePage"
          >
            <h2
              class="ExperiencePage__Title glitch"
            >
              Work_Experience
            </h2>
            <div
              class="ExperiencePage__Content"
            >
              <div
                class="Stepper"
              >
                <div
                  class="Step"
                >
                  <div
                    class="Step__LeftBlock"
                  >
                    <div
                      class="Step__Indicator Step__Indicator_current"
                    >
                      2
                    </div>
                    <div
                      class="Step__Arrow Step__Arrow_current"
                    />
                  </div>
                  <div
                    class="Step__Content"
                  >
                    <div
                      class="ExperiencePage__HistoryItem"
                    >
                      <div
                        class="Block"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Company:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="DSR Corporation"
                          >
                            DSR Corporation
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Website:
                          </label>
                          <a
                            class="Field__Value Link"
                            href="https://en.dsr-corporation.com"
                            title="https://en.dsr-corporation.com"
                          >
                            https://en.dsr-corporation.com
                          </a>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Mar 2022 – Present"
                          >
                            Mar 2022 – Present
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Career:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Software Engineer"
                          >
                            Software Engineer
                          </span>
                        </div>
                      </div>
                      <label
                        class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                      >
                        Project list
                      </label>
                      <label
                        class="Label Label_tiny Label_alignment-center"
                      >
                        (the most recent projects at the top)
                      </label>
                      <div
                        class="Card"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Project:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="eLIMS - a system for tracking, monitoring, and processing chemical sample data in laboratories."
                          >
                            eLIMS - a system for tracking, monitoring, and processing chemical sample data in laboratories.
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Jun 2022 – Present"
                          >
                            Jun 2022 – Present
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Environment:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Angular 2+ / AngularJS, React, RxJS, TypeScript, LESS, Azure, Webpack, Jasmine, Karma, Playwright"
                          >
                            Angular 2+ / AngularJS, React, RxJS, TypeScript, LESS, Azure, Webpack, Jasmine, Karma, Playwright
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Responsibilities:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="front-end development, feature implementation, debugging, testing, code review, design, dev validation"
                          >
                            front-end development, feature implementation, debugging, testing, code review, design, dev validation
                          </span>
                        </div>
                        <div
                          class="ExperiencePage__ContributionsData"
                        >
                          <label
                            class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                          >
                            Key contributions
                          </label>
                          <div
                            class="SimpleList ExperiencePage__ContributionsList"
                          >
                            <ul
                              class="SimpleList__Content"
                            >
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  As part of a feature team, developed the Layout Builder module — a visual content layout configuration tool for dialog windows;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Built an Excel-like table within a dedicated module with complex business logic support;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Maintained the Alias mechanism for dynamic renaming of business entities throughout the system;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Implemented license-based feature control, adjusting functionality availability based on active licenses;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Contributed to the statistics module: implemented and optimized chart rendering logic and patched the D3 library to meet project-specific requirements.
                                </label>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Card"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Project:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Add-In Plugin - a Microsoft Excel add-in designed for working with chemical lab analysis data."
                          >
                            Add-In Plugin - a Microsoft Excel add-in designed for working with chemical lab analysis data.
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Jan 2024 – Mar 2024"
                          >
                            Jan 2024 – Mar 2024
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Environment:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Angular 2+, RxJS, TypeScript, Jasmine, Karma, Azure, MS Excel"
                          >
                            Angular 2+, RxJS, TypeScript, Jasmine, Karma, Azure, MS Excel
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Responsibilities:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="front-end development, feature implementation, debugging, testing, code review, design, dev validation"
                          >
                            front-end development, feature implementation, debugging, testing, code review, design, dev validation
                          </span>
                        </div>
                        <div
                          class="ExperiencePage__ContributionsData"
                        >
                          <label
                            class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                          >
                            Key contributions
                          </label>
                          <div
                            class="SimpleList ExperiencePage__ContributionsList"
                          >
                            <ul
                              class="SimpleList__Content"
                            >
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Optimized the plugin’s performance in the web version of Excel, significantly speeding up several resource-intensive operations;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Took part in designing and implementing the application versioning mechanism.
                                </label>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Card"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Project:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="eLIMS Web Client - a client-facing web system for registering chemical sample analyses in laboratories."
                          >
                            eLIMS Web Client - a client-facing web system for registering chemical sample analyses in laboratories.
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Sep 2023 – Jan 2024"
                          >
                            Sep 2023 – Jan 2024
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Environment:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Angular 2+, NgXs, RxJS, TypeScript, Jasmine, Cypress, Azure"
                          >
                            Angular 2+, NgXs, RxJS, TypeScript, Jasmine, Cypress, Azure
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Responsibilities:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="front-end development, feature implementation, debugging, testing, code review, design, dev validation"
                          >
                            front-end development, feature implementation, debugging, testing, code review, design, dev validation
                          </span>
                        </div>
                        <div
                          class="ExperiencePage__ContributionsData"
                        >
                          <label
                            class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                          >
                            Key contributions
                          </label>
                          <div
                            class="SimpleList ExperiencePage__ContributionsList"
                          >
                            <ul
                              class="SimpleList__Content"
                            >
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Implemented a specific column resizing, ordering, and selection mechanism for new pages (distinct in behavior from existing ones) based on customer requirements, applying the Strategy design pattern;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Optimized user access control logic across pages and UI elements based on permissions.
                                </label>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                      <div
                        class="Card"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Project:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Ad Builder - a micro-frontend app for creating rental property listings and publishing them across various social media platforms."
                          >
                            Ad Builder - a micro-frontend app for creating rental property listings and publishing them across various social media platforms.
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Mar 2022 – Jun 2022"
                          >
                            Mar 2022 – Jun 2022
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Environment:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="React, Redux, NestJS, MikroORM, MariaDB, GitLab"
                          >
                            React, Redux, NestJS, MikroORM, MariaDB, GitLab
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Responsibilities:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="full-stack development, feature implementation, debugging, testing"
                          >
                            full-stack development, feature implementation, debugging, testing
                          </span>
                        </div>
                        <div
                          class="ExperiencePage__ContributionsData"
                        >
                          <label
                            class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                          >
                            Key contributions
                          </label>
                          <div
                            class="SimpleList ExperiencePage__ContributionsList"
                          >
                            <ul
                              class="SimpleList__Content"
                            >
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Joined the project from day one and helped define its architecture;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Integrated third-party services such as Facebook and Instagram;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Significantly improved the deployment pipeline using containerization (Docker), speeding up delivery and app maintenance.
                                </label>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="Step"
                >
                  <div
                    class="Step__LeftBlock Step__LeftBlock_withBottomBorder"
                  >
                    <div
                      class="Step__Indicator"
                    >
                      1
                    </div>
                    <div
                      class="Step__Arrow"
                    />
                  </div>
                  <div
                    class="Step__Content"
                  >
                    <div
                      class="ExperiencePage__HistoryItem"
                    >
                      <div
                        class="Block"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Company:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Technomarket"
                          >
                            Technomarket
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Website:
                          </label>
                          <a
                            class="Field__Value Link"
                            href="https://tm-v.ru"
                            title="https://tm-v.ru"
                          >
                            https://tm-v.ru
                          </a>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Nov 2019 – Mar 2022"
                          >
                            Nov 2019 – Mar 2022
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Career:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Software Engineer"
                          >
                            Software Engineer
                          </span>
                        </div>
                      </div>
                      <label
                        class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                      >
                        Project list
                      </label>
                      <label
                        class="Label Label_tiny Label_alignment-center"
                      >
                        (the most recent projects at the top)
                      </label>
                      <div
                        class="Card"
                      >
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Project:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="SMART-RIS is a medical software solution that streamlines workflows for radiologists, functional diagnostics specialists, and clinicians across various fields."
                          >
                            SMART-RIS is a medical software solution that streamlines workflows for radiologists, functional diagnostics specialists, and clinicians across various fields.
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Period:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="Nov 2019 – Mar 2022"
                          >
                            Nov 2019 – Mar 2022
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Environment:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="React, Redux, NestJS, MySql, Sequilize, Jest, TypeScript, Git, Linux"
                          >
                            React, Redux, NestJS, MySql, Sequilize, Jest, TypeScript, Git, Linux
                          </span>
                        </div>
                        <div
                          class="Field"
                        >
                          <label
                            class="Field__Label Label Label_keepWordBreak"
                          >
                            Responsibilities:
                          </label>
                          <span
                            class="Field__Value Text"
                            title="full-stack development, tech leadership, features implementation, debugging, refactoring, testing, code review"
                          >
                            full-stack development, tech leadership, features implementation, debugging, refactoring, testing, code review
                          </span>
                        </div>
                        <div
                          class="ExperiencePage__ContributionsData"
                        >
                          <label
                            class="IntermediateTitle IntermediateTitle_withCenterAlignment IntermediateTitle_withoutVMargins"
                          >
                            Key contributions
                          </label>
                          <div
                            class="SimpleList ExperiencePage__ContributionsList"
                          >
                            <ul
                              class="SimpleList__Content"
                            >
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Took part in end-to-end development of all major components — web client, web server, and desktop app — from MVP to a full-scale system now used across multiple healthcare facilities in the Voronezh and Lipetsk regions;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Led development of the “Report Builder” module, enabling dynamic form generation and PDF templates based on flexible XML schemas;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Helped integrate the system with other medical platforms like VOKKDC and MedSoft;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Contributed to the architecture of the “Configurator” — a core module for setting up organizations, workstations, and their relationships;
                                </label>
                              </li>
                              <li
                                class="SimpleList__ContentItem"
                              >
                                <label
                                  class="SimpleList__ContentItemValue"
                                >
                                  Migrated key functionality from the legacy desktop app to a modern web-based solution.
                                </label>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`App Page with route "/projects" matches snapshot, route "/projects" 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="App__Canvas"
    />
    <div
      class="App__Wrapper"
    >
      <header
        class="Header"
      >
        <div
          class="Header__LeftBlock"
        >
          <img
            alt="logo"
            src="FileMock"
            width="64"
          />
          <h1
            class="Header__LogoText"
          >
            <div>
              Web
            </div>
            <div>
              Resume
            </div>
          </h1>
        </div>
        <div
          class="Header__NavLinks"
        >
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/"
          >
            /Home
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/experience"
          >
            /Experience
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/skills"
          >
            /Skills
          </a>
          <a
            aria-current="page"
            class="Header__NavLink active"
            data-discover="true"
            href="/projects"
          >
            /Projects
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/contacts"
          >
            /Contacts
          </a>
        </div>
        <div
          class="Header__RightBlock"
        >
          <div
            class="Header__Menu"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Open menu"
              class="Header__MenuButton"
              type="button"
            >
              <svg
                class="Icon Icon_appFontSize"
                color="currentColor"
                fill="currentColor"
              >
                <use
                  xlink:href="FileMock#menu"
                />
              </svg>
            </button>
          </div>
        </div>
      </header>
      <main
        class="MainLayout"
      >
        <div
          class="MainLayout__Wrapper"
        >
          <div
            class="ProjectsPage"
          >
            <h2
              class="ProjectsPage__Title glitch"
            >
              Projects
            </h2>
            <div
              class="ProjectsPage__Items"
            >
              <div
                class="ProjectCard"
                role="button"
                tabindex="0"
              >
                <div
                  class="ProjectCard__ImageWrapper"
                >
                  <img
                    alt="HandySurf"
                    class="ProjectCard__Image"
                    src="FileMock"
                  />
                  <div
                    class="ProjectCard__Overlay"
                  />
                </div>
                <div
                  class="ProjectCard__Content"
                >
                  <h3
                    class="ProjectCard__Title"
                  >
                    HandySurf
                  </h3>
                  <p
                    class="ProjectCard__Description"
                  >
                    Chrome extension. Your ultimate hands-free browser control with advanced gesture recognition and AI-powered navigation.
                  </p>
                  <div
                    class="ProjectCard__Stack"
                  >
                    <h4
                      class="ProjectCard__StackTitle"
                    >
                      STACK:
                    </h4>
                    <div
                      class="ProjectCard__StackList"
                    >
                      <span
                        class="ProjectCard__StackItem"
                      >
                        React
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        RxJS
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Zustand
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        MUI
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        MediaPipe
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Webpack
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Typescript
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Python
                      </span>
                    </div>
                  </div>
                  <div
                    class="ProjectCard__Footer"
                  >
                    <a
                      class="ProjectCard__Link"
                      href="https://chromewebstore.google.com/detail/handysurf/bbpfkcnjhagmkpcglcmpgnnlkimpdeoo"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="Icon"
                        color="currentColor"
                        fill="currentColor"
                        height="2em"
                        width="2em"
                      >
                        <use
                          xlink:href="FileMock#link"
                        />
                      </svg>
                      Live Demo
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="ProjectCard"
                role="button"
                tabindex="0"
              >
                <div
                  class="ProjectCard__ImageWrapper"
                >
                  <img
                    alt="SIT36 Website"
                    class="ProjectCard__Image"
                    src="FileMock"
                  />
                  <div
                    class="ProjectCard__Overlay"
                  />
                </div>
                <div
                  class="ProjectCard__Content"
                >
                  <h3
                    class="ProjectCard__Title"
                  >
                    SIT36 Website
                  </h3>
                  <p
                    class="ProjectCard__Description"
                  >
                    A website for a company "StroyInTekh" specializing in the manufacturing of storage and purification equipment.
                  </p>
                  <div
                    class="ProjectCard__Stack"
                  >
                    <h4
                      class="ProjectCard__StackTitle"
                    >
                      STACK:
                    </h4>
                    <div
                      class="ProjectCard__StackList"
                    >
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Next.js
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        SCSS
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Jest
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Playwright
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        StoryBook
                      </span>
                    </div>
                  </div>
                  <div
                    class="ProjectCard__Footer"
                  >
                    <a
                      class="ProjectCard__Link"
                      href="https://sit36.ru"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="Icon"
                        color="currentColor"
                        fill="currentColor"
                        height="2em"
                        width="2em"
                      >
                        <use
                          xlink:href="FileMock#link"
                        />
                      </svg>
                      Live Demo
                    </a>
                    <a
                      class="ProjectCard__Link"
                      href="https://github.com/a1exevs/stroy-in-tekh"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="Icon"
                        color="currentColor"
                        fill="currentColor"
                        height="2em"
                        width="2em"
                      >
                        <use
                          xlink:href="FileMock#code"
                        />
                      </svg>
                      Repository
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="ProjectCard"
                role="button"
                tabindex="0"
              >
                <div
                  class="ProjectCard__ImageWrapper"
                >
                  <img
                    alt="Lipsync Timing Checker"
                    class="ProjectCard__Image"
                    src="FileMock"
                  />
                  <div
                    class="ProjectCard__Overlay"
                  />
                </div>
                <div
                  class="ProjectCard__Content"
                >
                  <h3
                    class="ProjectCard__Title"
                  >
                    Lipsync Timing Checker
                  </h3>
                  <p
                    class="ProjectCard__Description"
                  >
                    Application for calibrating viseme according to Audio track.
                  </p>
                  <div
                    class="ProjectCard__Stack"
                  >
                    <h4
                      class="ProjectCard__StackTitle"
                    >
                      STACK:
                    </h4>
                    <div
                      class="ProjectCard__StackList"
                    >
                      <span
                        class="ProjectCard__StackItem"
                      >
                        React
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Tailwind
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Wavesurfer
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Jest
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Playwright
                      </span>
                      <span
                        class="ProjectCard__StackItem"
                      >
                        StoryBook
                      </span>
                    </div>
                  </div>
                  <div
                    class="ProjectCard__Footer"
                  >
                    <a
                      class="ProjectCard__Link"
                      href="https://a1exevs.github.io/lipsync-timing-checker"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="Icon"
                        color="currentColor"
                        fill="currentColor"
                        height="2em"
                        width="2em"
                      >
                        <use
                          xlink:href="FileMock#link"
                        />
                      </svg>
                      Live Demo
                    </a>
                    <a
                      class="ProjectCard__Link"
                      href="https://github.com/a1exevs/lipsync-timing-checker"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="Icon"
                        color="currentColor"
                        fill="currentColor"
                        height="2em"
                        width="2em"
                      >
                        <use
                          xlink:href="FileMock#code"
                        />
                      </svg>
                      Repository
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="ProjectCard"
                role="button"
                tabindex="0"
              >
                <div
                  class="ProjectCard__ImageWrapper"
                >
                  <img
                    alt="TS-guards"
                    class="ProjectCard__Image"
                    src="FileMock"
                  />
                  <div
                    class="ProjectCard__Overlay"
                  />
                </div>
                <div
                  class="ProjectCard__Content"
                >
                  <h3
                    class="ProjectCard__Title"
                  >
                    TS-guards
                  </h3>
                  <p
                    class="ProjectCard__Description"
                  >
                    Typescript guards library. This library provides a robust set of utility functions to simplify and streamline type-checking and guard validation in your code.
                  </p>
                  <div
                    class="ProjectCard__Stack"
                  >
                    <h4
                      class="ProjectCard__StackTitle"
                    >
                      STACK:
                    </h4>
                    <div
                      class="ProjectCard__StackList"
                    >
                      <span
                        class="ProjectCard__StackItem"
                      >
                        Typescript
                      </span>
                    </div>
                  </div>
                  <div
                    class="ProjectCard__Footer"
                  >
                    <a
                      class="ProjectCard__Link"
                      href="https://www.npmjs.com/package/@alexevs/ts-guards?activeTab=readme"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="Icon"
                        color="currentColor"
                        fill="currentColor"
                        height="2em"
                        width="2em"
                      >
                        <use
                          xlink:href="FileMock#link"
                        />
                      </svg>
                      Live Demo
                    </a>
                    <a
                      class="ProjectCard__Link"
                      href="https://github.com/a1exevs/ts-guards"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      <svg
                        class="Icon"
                        color="currentColor"
                        fill="currentColor"
                        height="2em"
                        width="2em"
                      >
                        <use
                          xlink:href="FileMock#code"
                        />
                      </svg>
                      Repository
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`App Page with route "/skills" matches snapshot, route "/skills" 1`] = `
<div>
  <div
    class="App"
  >
    <div
      class="App__Canvas"
    />
    <div
      class="App__Wrapper"
    >
      <header
        class="Header"
      >
        <div
          class="Header__LeftBlock"
        >
          <img
            alt="logo"
            src="FileMock"
            width="64"
          />
          <h1
            class="Header__LogoText"
          >
            <div>
              Web
            </div>
            <div>
              Resume
            </div>
          </h1>
        </div>
        <div
          class="Header__NavLinks"
        >
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/"
          >
            /Home
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/experience"
          >
            /Experience
          </a>
          <a
            aria-current="page"
            class="Header__NavLink active"
            data-discover="true"
            href="/skills"
          >
            /Skills
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/projects"
          >
            /Projects
          </a>
          <a
            class="Header__NavLink"
            data-discover="true"
            href="/contacts"
          >
            /Contacts
          </a>
        </div>
        <div
          class="Header__RightBlock"
        >
          <div
            class="Header__Menu"
          >
            <button
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="Open menu"
              class="Header__MenuButton"
              type="button"
            >
              <svg
                class="Icon Icon_appFontSize"
                color="currentColor"
                fill="currentColor"
              >
                <use
                  xlink:href="FileMock#menu"
                />
              </svg>
            </button>
          </div>
        </div>
      </header>
      <main
        class="MainLayout"
      >
        <div
          class="MainLayout__Wrapper"
        >
          <div
            class="SkillsPage"
          >
            <h2
              class="SkillsPage__Title glitch"
            >
              Skills_Matrix
            </h2>
            <div
              class="SkillsPage__Items"
            >
              <div
                class="SkillsCard"
              >
                <h3
                  class="SkillsCard__Title"
                >
                  <span
                    class="SkillsCard__TitleIcon"
                  >
                    &gt;
                  </span>
                   
                  Programming_Languages
                </h3>
                <ul
                  class="SkillsCard__List"
                >
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    JavaScript
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    TypeScript
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    HTML
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    CSS/LESS/SCSS
                  </li>
                </ul>
              </div>
              <div
                class="SkillsCard"
              >
                <h3
                  class="SkillsCard__Title"
                >
                  <span
                    class="SkillsCard__TitleIcon"
                  >
                    &gt;
                  </span>
                   
                  Frameworks_&_Libraries
                </h3>
                <ul
                  class="SkillsCard__List"
                >
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Angular
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    React
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Next.js
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    NestJS
                  </li>
                </ul>
              </div>
              <div
                class="SkillsCard"
              >
                <h3
                  class="SkillsCard__Title"
                >
                  <span
                    class="SkillsCard__TitleIcon"
                  >
                    &gt;
                  </span>
                   
                  Databases
                </h3>
                <ul
                  class="SkillsCard__List"
                >
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    PostgreSQL
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    MySQL
                  </li>
                </ul>
              </div>
              <div
                class="SkillsCard"
              >
                <h3
                  class="SkillsCard__Title"
                >
                  <span
                    class="SkillsCard__TitleIcon"
                  >
                    &gt;
                  </span>
                   
                  Tools_&_Platforms
                </h3>
                <ul
                  class="SkillsCard__List"
                >
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Git & GitHub & GitLub
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Docker
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Webpack
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Jira & Confluence
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Azure
                  </li>
                </ul>
              </div>
              <div
                class="SkillsCard"
              >
                <h3
                  class="SkillsCard__Title"
                >
                  <span
                    class="SkillsCard__TitleIcon"
                  >
                    &gt;
                  </span>
                   
                  Soft_Skills
                </h3>
                <ul
                  class="SkillsCard__List"
                >
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Mentoring
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Problem Solving
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Team Collaboration
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Agile Methodologies
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Communication
                  </li>
                  <li
                    class="SkillsCard__Item"
                  >
                    <span
                      class="SkillsCard__CodeIcon"
                    >
                      //
                    </span>
                     
                    Adaptability
                  </li>
                </ul>
              </div>
              <div
                class="ContinuousLearningCard"
              >
                <svg
                  class="Icon ContinuousLearningCard__Icon"
                  color="currentColor"
                  fill="currentColor"
                  width="5rem"
                >
                  <use
                    xlink:href="FileMock#psychology"
                  />
                </svg>
                <h3
                  class="ContinuousLearningCard__Title"
                >
                  Continuous_Learning
                </h3>
                <p
                  class="ContinuousLearningCard__Text"
                >
                  Constantly upgrading my skill set to stay ahead in the ever-evolving tech landscape.
                </p>
              </div>
            </div>
            <div
              class="SkillsPage__ScanInfo"
            >
              <p>
                SYSTEM_SCAN_COMPLETE: 
                <span
                  class="SkillsPage__ScanHighlight"
                >
                  All skills up-to-date.
                </span>
              </p>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
